# DeteccaoObjetos

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  detecao_objetos.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: .gitkeep
docs/: .gitkeep
examples/: __init__.py  advanced_usage.py  basic_usage.py
models/: .gitkeep
src/: __init__.py
src/audio/: __init__.py  speaker.py
src/config/: __init__.py  config.py
src/detection/: __init__.py  detector.py
src/interface/: __init__.py  gradio_interface.py
src/logging/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_config.py  test_detector.py
